@@ -17,7 +17,7 @@
             "client": {
                 "host": "172.18.0.1",
                 "id": "sarama",
-                "member_id": "sarama-714cfb8b-39e5-4128-9109-e5056c5e8f56"
+                "member_id": "sarama-fcb5a5db-0474-4f3a-a5af-29e2f14549c5"
             },
             "error": {
                 "code": 0
@@ -29,7 +29,8 @@
             "topic": "metricbeat-test"
         },
         "partition": {
-            "id": 0
+            "id": 0,
+            "topic_id": "0-metricbeat-test"
         },
         "topic": {
             "name": "metricbeat-test"
