@@ -14,6 +14,7 @@
                 "address": "172.18.0.2:9092",
                 "id": 0
             },
+            "id": 0,
             "offset": {
                 "newest": 0,
                 "oldest": 0
@@ -26,11 +27,13 @@
                 "replica": 0
             },
             "topic": {
-                "name": "foo-1532945633-185372965"
-            }
+                "name": "foo-1538389014-739473801"
+            },
+            "topic_broker_id": "0-foo-1538389014-739473801-0",
+            "topic_id": "0-foo-1538389014-739473801"
         },
         "topic": {
-            "name": "foo-1532945633-185372965"
+            "name": "foo-1538389014-739473801"
         }
     },
     "metricset": {
