@@ -153,6 +153,7 @@ https://github.com/elastic/beats/compare/v6.4.0...master[Check the HEAD diff]
 - Support for Kafka 2.0.0 {pull}8399[8399]
 - Add container image for docker metricsets. {issue}8214[8214] {pull}8438[8438]
 - Add support for `full` status page output for php-fpm module as a separate metricset called `process`. {pull}8394[8394]
+- Precalculate composed id fields for kafka dashboards. {pull}8504[8504]
 
 *Packetbeat*
 
